# Eccentricity_vs_Lensed

./: .gitignore  README.md  cnn copy.ipynb  cnn.ipynb  gen.py  gen_with_additional_functionalities.py  misclassified_validation.txt  parameters_reference.csv  pyproject.toml  snr_lookup_table.csv  structure.md  transformer.py  transformer_with_ROC.py  transformer_with_ROC_and_File_Classification.py
eccentric_ml/: transformer_with_ROC.py
eccentric_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eccentric_ml/modules/: general_utils.py  gw_utils.py
gwtorch/: __init__.py  cnn_eval.py
gwtorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gwtorch/inference/: cnn_eval.py
gwtorch/modules/: gw_utils.py
gwtorch/training/: cnn.py  transformer_with_ROC_and_File_Classification.py
gwtorch/waveform_generation/: gen.py  gen_with_additional_functionalities.py  gw_signal_gen_on_ln_B_basis.py
modules/: gw_utils.py  inject_signal.py
notebooks/: analysis.ipynb  cnn.ipynb  eval_based_on_ln_B transformer.ipynb  eval_based_on_ln_B.ipynb  eval_based_on_ln_B_cnn.ipynb  gen.ipynb  gw_utils.py
results/: test_data_parameters.csv
results/cnn_results/: misclassified_test.pkl  misclassified_test.txt
results/transformer_results/: misclassified_test.txt  misclassified_validation.txt
scripts/: cnn.py  cnn_eval.py  gen.py  gen_with_additional_functionalities.py  gw_signal_gen_on_ln_B_basis.py  transformer.py  transformer_with_ROC_and_File_Classification.py
scripts/modules/: general_utils.py  neural_net.py
(+2 files in other folders)
